<resources>
    <string name="app_name">QuizApp</string>
    <string name="lblMcqQuestion">MCQ Questions</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtReset">Reset</string>
    <string name="ans1">Result: 0 1 2 3</string>
    <string name="q1a2">Result: 1 2 3 4</string>
    <string name="q1a3">Result: 1 2 3 4 5</string>
    <string name="q1a4">Result: 2 3 4 5</string>
    <string name="q2">Q2: var s: String = \"Hello\" \nWhat is the valid statement to print s?</string>
    <string name="q2a1">println(\"Length of string $s is ${s.length}\")</string>
    <string name="q2a2">println(\"Length of string #s is #{s.length}\")</string>
    <string name="q2a3">show(\"Length of string #s is #{s.length}\")</string>
    <string name="q2a4">display(\"Length of string #s is #{s.length}\")</string>
    <string name="q1">Q1: for (i in 1 until 5) { print(i) } ptints-</string>
</resources>